 - GBA Memory: Improve Thumb open bus behavior
 - VFS: Fix resource leaks if some allocations fail
 - Video: Fix an issue with very long filenames
 - GBA Video: Blended sprites should never have other effects applied
 - GBA: Fix crash if a 512kb flash save is loaded when a game has a 1Mb flash override
 - Qt: Better cleanup when a game crashes
Misc:
 - Qt: Handle saving input settings better
 - Debugger: Free watchpoints in addition to breakpoints
 - Qt: Move GL frame drawing back onto its own thread
 - GBA: Add status log level
 - GBA Thread: Add functionality for running callbacks on the GBA thread
 - Qt: Fast forward (held) option moved from Other to Emulation menu
 - All: Add --help flag for command line programs
 - Qt: Show version info in window title

0.2.1: (2015-05-13)
Bugfixes:
 - All: Fix sanitize-deb script not cleaning up after itself
 - All: Fix dependencies for libavcodec on Debian-derived platforms
 - ARM7: Handle writeback for PC in addressing modes 2 and 3
 - ARM7: Make illegal instruction decoding consistent between ARM and Thumb
 - ARM7: Fix ARM multiply instructions when PC is a destination register
 - Debugger: Fix use-after-free in breakpoint clearing code
 - Debugger: Fix boundary conditions in tab completion
 - GBA: Fix timers not updating timing when writing to only the reload register
 - GBA: Fix rewind boundary conditions
 - GBA: Add initial I/O register settings for background matrix registers
 - GBA: Fix hang when loading a savestate if sync to video is enabled
 - GBA: Handle out-of-bounds I/O access
 - GBA: Fix bounds-checking on EEPROM access
 - GBA Audio: FIFOs should not poll DMAs that are not scheduled for audio
 - GBA BIOS: Initialize a variable that may be uninitialized in very rare cases
 - GBA Memory: Allow SRAM to be 64kB
 - GBA Memory: Fix 32-bit loads from unaddress cartridge space
 - GBA Memory: Fix jumping to invalid memory when switching from Thumb to ARM
 - GBA Video: Fix second frame mode 5